--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 :root{
     --nintendoRed: #E60012;
     --blue: #205BE7;
+    --gold: #ab9853;
+    --black: #1f1f1f;
 }
 
 *{
@@ -22,6 +24,9 @@ body{
     background-position: center;
     background-attachment: fixed;
     padding: 2rem 4rem;
+    position: relative;
+    min-height: 100vh;
+    height: 100%;
 }
 
 .navbar{
@@ -76,4 +81,67 @@ body{
     background: var(--blue);
 }
 
+.windowBackground{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
 
+.windowContainer{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 60vw;
+    border-radius: 16px;
+    background-color: white;
+    padding: 2em;
+}
+
+.windowContainer .windowImage{
+    width: 380px;
+    border: solid green;
+}
+
+.windowContainer .windowImage img{
+    width: 100%;
+}
+
+.windowContainer .windowText{
+    border: solid blue;    
+}
+
+.windowContainer .windowText button{
+    display: block;
+}
+
+.windowContainer .closeBtn{
+    background: var(--nintendoRed);
+    border: none;
+    border-radius: 50%;
+    padding: 12px 16px;
+    text-align: center;
+    box-shadow: 0 0px 4px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    transition: all ease .3s;
+    position: absolute;
+    top: -16px;
+    right: -16px;
+}
+.windowContainer .closeBtn:hover{
+    background: var(--black);
+}
+
+.windowContainer .closeBtn i{
+    font-size: 1.1em;
+}
