--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body{
     backdrop-filter: blur(10px);
     background: rgba(0, 0, 0, 0.8);
     z-index: 1;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     overflow: hidden;
