--- a/style.css
+++ b/style.css
@@ -1,223 +1,223 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
-:root{
-    --nintendoRed: #E60012;
-    --blue: #205BE7;
-    --gold: #ab9853;
-    --black: #1f1f1f;
-    --orange: #F0A400;
-    --yellow: #D38900;
+:root {
+  --nintendoRed: #e60012;
+  --blue: #205be7;
+  --gold: #ab9853;
+  --black: #1f1f1f;
+  --orange: #f0a400;
+  --yellow: #d38900;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    font-family: 'Nunito', sans-serif;
-    color: #FFFFFF;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Nunito", sans-serif;
+  color: #ffffff;
 }
 
-body{
-    background: radial-gradient(circle, rgba(4,4,4,0.2) 0%, rgba(4,4,4,0.5) 100%), url(./img/wallpaper.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    padding: 2rem 4rem;
-    position: relative;
-    min-height: 100vh;
-    height: 100%;
+body {
+  background: radial-gradient(
+      circle,
+      rgba(4, 4, 4, 0.2) 0%,
+      rgba(4, 4, 4, 0.5) 100%
+    ),
+    url(./img/wallpaper.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  padding: 2rem 4rem;
+  position: relative;
+  min-height: 100vh;
+  height: 100%;
 }
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
+.navbar {
+  display: flex;
+  justify-content: space-between;
 }
 
-.navbar .logo{
-    width: 180px;
+.navbar .logo {
+  width: 180px;
 }
 
-.navbar .logo .logoImage{
-    width: 100%;
+.navbar .logo .logoImage {
+  width: 100%;
 }
 
-.navbar .navlinks{
-    display: flex;
-    align-items: center;
-    gap: 1.2em;
+.navbar .navlinks {
+  display: flex;
+  align-items: center;
+  gap: 1.2em;
 }
 
-.navbar .navlinks li a{
-    font-size: 1.1em;
-    font-weight: 600;
-    border: transparent;
-    padding: 4px 6px;
-    border-bottom: 2px solid transparent;
-    cursor: pointer;
-    transition: all ease .3s;
+.navbar .navlinks li a {
+  font-size: 1.1em;
+  font-weight: 600;
+  border: transparent;
+  padding: 4px 6px;
+  border-bottom: 2px solid transparent;
+  cursor: pointer;
+  transition: all ease 0.3s;
 }
-.navbar .navlinks li a:hover{
-    font-size: 1.2rem;
-    border-bottom: 2px solid white;
-}
-
-.navbar .navlinks li .btn{
-    background-color: var(--nintendoRed);
-    font-size: 1.1em;
-    font-weight: 600;
-    border: none;
-    padding: 8px 12px;
-    border-radius: 4px;
-    box-shadow: 0 0px 4px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
-    transition: all ease .3s;
-}
-.navbar .navlinks li .btn:hover{
-    transform: scale(1.1);
+.navbar .navlinks li a:hover {
+  font-size: 1.2rem;
+  border-bottom: 2px solid white;
 }
 
-.navbar .navlinks li .loginBtn{
-    background: var(--blue);
+.navbar .navlinks li .btn {
+  background-color: var(--nintendoRed);
+  font-size: 1.1em;
+  font-weight: 600;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: all ease 0.3s;
+}
+.navbar .navlinks li .btn:hover {
+  transform: scale(1.1);
 }
 
-
-
-.windowBackground{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    background: rgba(0, 0, 0, 0.8);
-    z-index: 1;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+.navbar .navlinks li .loginBtn {
+  background: var(--blue);
 }
 
-.windowContainer{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 60vw;
-    color: var(--black);
-    border-radius: 16px;
-    padding: 2em;
-    z-index: 10;
-    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.262);
-    background: white;
-    animation: appear 1s ease;
+.windowBackground {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
-@keyframes appear{
-
-    from{
-        transform: translateY(50vh);
-    }
-    to{
-        transform: translateY(0);
-    }
+.windowContainer {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 60vw;
+  color: var(--black);
+  border-radius: 16px;
+  padding: 2em;
+  z-index: 10;
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.262);
+  background: white;
+  animation: appear 1s ease;
 }
 
-.close{
-    transition: transform 1s cubic-bezier(0, -0.42, 1, -0.41);
-    transform: translateY(60vh);
+@keyframes appear {
+  from {
+    transform: translateY(50vh);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
 
-.windowContainer .windowImage{
-    width: 380px;
+.close {
+  transition: transform 1s cubic-bezier(0, -0.42, 1, -0.41);
+  /* https://lenguajecss.com/css/animaciones/timing-function/ */
+  transform: translateY(60vh);
 }
 
-.windowContainer .windowImage img{
-    width: 100%;
+.windowContainer .windowImage {
+  width: 380px;
 }
 
-.windowContainer .windowText{
-    color: var(--black);
+.windowContainer .windowImage img {
+  width: 100%;
 }
 
-.windowContainer .windowText h1{
-    display: block;
-    text-align: center;
-    padding: 6px 12px;
-    color: var(--gold);
-    background: var(--black);
-    border: 2px inset var(--gold);
-    margin-bottom: .8em;
+.windowContainer .windowText {
+  color: var(--black);
 }
 
-.windowContainer .windowText p{
-    color: var(--black);
-    font-weight: 500;
-    font-size: 1.1em;
-    opacity: .8;
-    margin-bottom: .5em;
+.windowContainer .windowText h1 {
+  display: block;
+  text-align: center;
+  padding: 6px 12px;
+  color: var(--gold);
+  background: var(--black);
+  border: 2px inset var(--gold);
+  margin-bottom: 0.8em;
 }
 
-.windowContainer .windowText span{
-    font-weight: 600;
-    font-size: 1.4em;
-    color: var(--gold);
-    font-style: italic;
+.windowContainer .windowText p {
+  color: var(--black);
+  font-weight: 500;
+  font-size: 1.1em;
+  opacity: 0.8;
+  margin-bottom: 0.5em;
 }
 
-.windowText .windowButtons{
-    display: flex;
-    gap: 2em;
-    align-items: center;
+.windowContainer .windowText span {
+  font-weight: 600;
+  font-size: 1.4em;
+  color: var(--gold);
+  font-style: italic;
 }
 
-.windowContainer .windowText .windowButtons button{
-    background: var(--nintendoRed);
-    border: none;
-    padding: 8px 16px;
-    font-size: 1.1em;
-    font-weight: 600;
-    margin-top: .7em;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all ease .3s;
-}
-.windowContainer .windowText .windowButtons button:hover{
-    transform: scale(1.1);
+.windowText .windowButtons {
+  display: flex;
+  gap: 2em;
+  align-items: center;
 }
 
-.windowContainer .windowText .windowButtons button:last-of-type{
-    background: var(--yellow);
+.windowContainer .windowText .windowButtons button {
+  background: var(--nintendoRed);
+  border: none;
+  padding: 8px 16px;
+  font-size: 1.1em;
+  font-weight: 600;
+  margin-top: 0.7em;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all ease 0.3s;
+}
+.windowContainer .windowText .windowButtons button:hover {
+  transform: scale(1.1);
 }
 
-.windowContainer .windowText button i{
-    margin-left: 8px;
+.windowContainer .windowText .windowButtons button:last-of-type {
+  background: var(--yellow);
 }
 
-
-
-.windowContainer .closeBtn{
-    background: var(--nintendoRed);
-    border: none;
-    border-radius: 50%;
-    padding: 12px 16px;
-    text-align: center;
-    box-shadow: 0 0px 4px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
-    transition: all ease .1s;
-    position: absolute;
-    top: -16px;
-    right: -16px;
-}
-.windowContainer .closeBtn:hover{
-    background: var(--black);
-    border: 2px solid var(--gold);
+.windowContainer .windowText button i {
+  margin-left: 8px;
 }
 
-.windowContainer .closeBtn i{
-    font-size: 1.1em;
+.windowContainer .closeBtn {
+  background: var(--nintendoRed);
+  border: none;
+  border-radius: 50%;
+  padding: 12px 16px;
+  text-align: center;
+  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: all ease 0.1s;
+  position: absolute;
+  top: -16px;
+  right: -16px;
+}
+.windowContainer .closeBtn:hover {
+  background: var(--black);
+  border: 2px solid var(--gold);
 }
 
+.windowContainer .closeBtn i {
+  font-size: 1.1em;
+}
